--- a/index.html
+++ b/index.html
@@ -8,27 +8,26 @@
   
   <title>Frontend Mentor | Blog preview card</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="styles.css" />
+
 </head>
 <body>
 
-  Learning
+  <main class="container">
+    <div class="card">
+      <img src="./assets/images/illustration-article.svg" alt="" />
 
-  Published 21 Dec 2023
+      <h1 class="mini-title">Learning</h1>
 
-  HTML & CSS foundations
+      <p class="mini-text">Published 21 Dec 2023</p>
 
-  These languages are the backbone of every website, defining structure, content, and presentation.
+      <h2 class="main-title">HTML & CSS foundations</h2>
 
-  Greg Hooper
+      <p class="text">These languages are the backbone of every website, defining structure, content, and presentation.</p>
+
+      <p>Greg Hooper</p>
+    </div>
+  </main>
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
 </body>
 </html>
