Added div element for the author.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
 
       <p class="text">These languages are the backbone of every website, defining structure, content, and presentation.</p>
 
-      <p>Greg Hooper</p>
+      <div class="author">
+        <img src="./assets/images/image-avatar.webp" alt="" />
+        <p class="author-name">Greg Hooper</p>
+      </div>
     </div>
   </main>
   
